--- a/style.css
+++ b/style.css
@@ -26,13 +26,18 @@ h2 {
   text-shadow: 3px 3px #4B088A;
 }
 
-p {
+h3 {
+  text-transform: uppercase;
+  font-weight: 800;
+  color: #4B088A;
+  text-shadow: 0.5px 0.5px #D8CEF6;
   font-size: 30px;
-  font-weight: 700;
-  padding: 30px 0;
+  padding-bottom: 10px;
 }
 
-span {
+p {
+  font-size: 25px;
+  padding: 30px 0;
   font-weight: 600;
 }
 
@@ -71,26 +76,32 @@ h1::after {
   font-size: 50px;
 }
 
-p::before {
+#console > p {
+  font-size: 30px;
+  font-weight: 700;
+  padding: 30px 0;
+}
+
+#console > p::before {
   content: '\f101';
   margin-right: 20px;
 }
 
-p::after {
+#console > p::after {
   content: '\f100';
   margin-left: 20px;
 }
 
-p::before,
-p::after {
+#console > p::before,
+#console > p::after {
   font-family: "Font Awesome 5 Free";
   font-weight: 700;
   font-size: 30px;
 }
 
-p:hover,
-p:hover::before,
-p:hover::after {
+#console > p:hover,
+#console > p:hover::before,
+#console > p:hover::after {
   color: #BCA9F5;
   text-shadow: 2px 2px #4B088A;
   cursor: pointer;
