--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ p {
 
 #page-wrapper {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background: rgb(28,53,213);
   background: linear-gradient(0deg, rgba(28,53,213,1) 0%, rgba(47,184,203,1) 80%);
 }
